# Pig

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  electron.vite.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
docs/: heroui-pro-integration.md  heroui-sidebar-slots.md
electron/: backend.ts  main.ts  preload.ts
src/: agent-workspace.test.tsx  agent-workspace.tsx  app-shell.test.tsx  app-shell.tsx  backend-config.test.ts  backend-execution-checkout.test.ts  backend-pi-rpc.test.ts  backend-service.test.ts  backend-sessions.test.ts  electron-shell.test.ts  execution-checkout-client.test.ts  execution-checkout-client.ts  execution-checkout-tauri.test.ts  execution-checkout-tauri.ts  execution-checkout.ts  heroui-pro-integration.test.ts  heroui-pro-theme.test.ts  main.tsx  pi-rpc-transport.fakes.ts  pi-rpc-transport.test.ts  pi-rpc-transport.ts  pi-runtime-bridge.test.ts  pi-runtime-bridge.ts  pi-runtime-factory.ts  refresh.ts  runtime.ts  session-creation.test.ts  session-detail.fixtures.ts  session-detail.test.tsx  (+17 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/fixtures/pi-agent/: auth.json
src-tauri/fixtures/pi-agent/sessions/project-beta/: 2026-01-03T12-00-00-000Z_middle-session.jsonl
src-tauri/fixtures/pi-agent/sessions/project-gamma/: 2026-01-05T15-30-00-000Z_newest-session.jsonl
src-tauri/fixtures/pi-agent/skills/review/: SKILL.md
src-tauri/fixtures/pi-agent/skills/summarize/: SKILL.md
src-tauri/src/: config.rs  execution_checkout.rs  lib.rs  main.rs  sessions.rs
(+147 files in other folders)
