[package]
name = "pig"
version = "0.1.0"
description = "A passive flight recorder for Pi Agent"
authors = ["BubblePtr"]
edition = "2021"

[lib]
name = "pig_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tauri = { version = "2.8.5", features = [] }
thiserror = "2.0.3"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.12.0"
